aggiornamento dataset per training

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
     <h1>Filtro Spam - Decision Tree</h1>
 
     <form method="post">
-        <textarea name="email_text" placeholder="Incolla qui la tua email o testo"></textarea>
+        <textarea name="email_text" placeholder="Incolla qui la tua mail o testo"></textarea>
         <button type="submit">Predici</button>
     </form>
 
